--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                 </li>
               </ul>
             </span>
-            <%= link_to "投稿する", tweets_new_path, class: 'post' %>
+            <%= link_to "投稿する", tweets_path, class: 'post' %>
           </div>
         <% else %>
           <div class="user_nav grid-6">
