--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                 </li>
               </ul>
             </span>
-            <%= link_to "投稿する", tweets_path, class: 'post' %>
+            <a class="post" href="/tweets/new">投稿する</a>
           </div>
         <% else %>
           <div class="user_nav grid-6">
