--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -40,5 +40,13 @@
         <% end %>
       <% end %>
     </div>
+
+    <h3>いいね件数: <%= @tweet.likes.count %></h3>
+    <% if current_user.already_liked?(@tweet) %>
+      <%= button_to 'いいねを取り消す', tweet_like_path(@tweet), method: :delete %>
+    <% else %>
+      <%= button_to 'いいね', tweet_likes_path(@tweet) %>
+    <% end %>
+
   </div>
 </div>
